--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "HigherOrderKernels"
 uuid = "451eba6f-1be1-5dbe-8902-f773bf8b6763"
 authors = ["Godisemo <carl.akerlindh@gmail.com>"]
-version = "0.2.0"
+version = "0.2.1"
 
 [deps]
 GaussQuadrature = "d54b0c1a-921d-58e0-8e36-89d8069c0969"
@@ -12,6 +12,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 [compat]
 GaussQuadrature = "0.5.0"
 Polynomials = "1.0.0"
+SpecialFunctions = "0.8, 0.9, 0.10"
 julia = "1.2.0"
 
 [extras]
